# multiTypeTree

./: CMakeLists.txt  README.md  main.cpp  multiTypeTree.cpp  multiTypeTree.h  testTree
source/: multiTypeTree.cpp  multiTypeTree.h
source/tests/: testTrees.cpp  testTrees.h  tests.cpp  tests.h
